gccida/c2/can_combine_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1398:10: error: conflicting types for 'can_combine_p'
__int64  can_combine_p( rtx insn, rtx i3, rtx pred, rtx succ, rtx *pdest, rtx *psrc) 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:348:12: note: previous declaration is here
static int can_combine_p        PARAMS ((rtx, rtx, rtx, rtx, rtx *, rtx *));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1422:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1422:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1427:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1427:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1428:4: error: expected ';' after expression
rtx v37; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1428:5: error: use of undeclared identifier 'v37'
rtx v37; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1431:4: error: expected ';' after expression
rtx v40; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1431:5: error: use of undeclared identifier 'v40'
rtx v40; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1443:4: error: expected ';' after expression
rtx v52; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1443:5: error: use of undeclared identifier 'v52'
rtx v52; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1447:6: error: use of undeclared identifier 'datum'
rtx *datum; // [rsp+8h] [rbp-60h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1448:4: error: expected ';' after expression
rtx datuma; // [rsp+8h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1448:5: error: use of undeclared identifier 'datuma'
rtx datuma; // [rsp+8h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1449:4: error: expected ';' after expression
rtx v58; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1449:5: error: use of undeclared identifier 'v58'
rtx v58; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1455:1: error: use of undeclared identifier 'v58'
v58 = insn; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1468:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/combine.c:1478:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)v12->fld[0]; 
                       ^~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_combine_p/src/obj/combine.o] Error 1
